2009-02-24  Sancho lerena   <slerena@artica.es>

	* util/tentacle_server: Added to package.
	
	* pandora_server_installer,
	pandora_server_upgrade: Updated scripts.
	
	* Config.pm: Updated version and headers to 2.1

2009-02-11  Sancho Lerena <slerena@artica.es>

	* lib/DB.pm: Added more checks to avoid warnings in log.
	
	* lib/Tool.pm: Improved is_numeric() function.

2009-02-11  Sancho Lerena <slerena@artica.es>

	* bin/pandora_network: Restored lock for icmp / ping calls.

2009-02-10  Sancho Lerena <slerena@artica.es>

	* bin/pandora_network: Timeticks are now processed ok.

2009-02-10  Sancho Lerena <slerena@artica.es>

	* bin/pandora_network: An important BUG discovered in SNMP call locking
	mechanism. Now calls to SNMP are using exec to snmpget command. Much  
	faster due solved locking problems.

	* pandora_*: Startup daemons add a 2-sec delay in restart event.
	
2000-02-03  Sancho Lerena <slerena@artica.es>

	* pandora_db.pl: BUGFIX. DB Maintance was deleting data older than 24hr
	since commit of 12th January!.
	
	* pandora_wmi, pandora_network: Algorithm upgraded. First are executed 
	modules with less margin until be considered down and modules with flag
	of manual execution.
	
2000-01-16  Sancho Lerena <slerena@artica.es>

    * bin/pandora_plugin, pandora_wmi, pandora_recon: Updated server, better
    performance, solved some minor fixes. Ported some fixes from development
    on recon.
    
    * Config.pm: Updated build number.
    
    * DB.pm: module_generic_proc manages better some string values coming
    from the function call (true, false).
    
2000-01-12  Sancho Lerena <slerena@artica.es>

	* DB.pm: Agent AccessUpdate  now uses unixtime (faster!).

	* pandora_server_upgrade: Updates permission on files.

2000-01-12  Sancho Lerena <slerena@artica.es>

	* DB.pm: Added generic functions db_delete, db_update and db_insert.

	* util/pandora_db.pl: Optimized maintance script. Solves some detected
	performance issues.
