@@ -170,10 +170,10 @@ mta_address localhost
 # mta_port: MTA port (default 25)
 # mta_port 25
 
-# mta_user: MTA User (if needed for auth)
-# mta_pass: MTA Pass (if needed for auth)
-# mta_auth: MTA Auth system (if needed, support: LOGIN PLAIN CRAM-MD5 DIGEST-MD)
-# mta_from: Email address that sends the mail, by default is pandora@localhost 
+# mta_user  MTA User (if needed for auth)
+# mta_pass  MTA Pass (if needed for auth)
+# mta_auth  MTA Auth system (if needed, support: LOGIN PLAIN CRAM-MD5 DIGEST-MD)
+# mta_from  Email address that sends the mail, by default is pandora@localhost 
 #           probably you need to change it to avoid problems with your antispam
 
 
@@ -194,4 +194,8 @@ autocreate 1
 # log file grows above this limit, is renamed to "pandora_server.log.old".
 
 max_log_size 65536
+
+# snmpget: Needed to do SNMP checks. By default is on /usr/bin/snmpget
+
+# snmpget /usr/bin/snmpget
 
